--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 Markdown==3.3.3
 psycopg2==2.8.6
+python-dotenv==0.15.0
 pytz==2020.4
 sqlparse==0.4.1
 whitenoise==5.2.0
